selfhost/tests/neg/index.ail
// EXPECT: cannot index value of type i64
n := 5
n[0]
